package it.ucdm.leisure.dinnerplan.features.user;

public enum Role {
    ORGANIZER,
    PARTICIPANT,
    ADMIN
}
